@@ -1,2 +1,5 @@
 Class('basic::C', 'basic.h')
 Function('basic::call_f', 'basic.h')
+Function('basic::get_static', 'basic.h')
+Function('basic::get_value', 'basic.h')
+
