@@ -1,3 +1,6 @@
+06 Apr 2003
+Support for the improved static data members support of Boost.Python.
+
 05 Apr 2003
 New option for generating the bindings: --multiple.
 
